party ui complete

--- a/assure/src/main/webapp/html/binSku.html
+++ b/assure/src/main/webapp/html/binSku.html
@@ -24,10 +24,10 @@
     <table  class="table" >
         <thead class="thead-dark">
             <tr>
-              <th scope="col">BinId</th>
+              <th scope="col">Bin ID</th>
               <th scope="col">Quantity</th>
-              <th scope="col">GlobalSkuId</th>
-              <th scope="col">ClientSkuId</th>
+              <th scope="col">Global SKU ID</th>
+              <th scope="col">Client SKU ID</th>
               <th scope="col">Edit</th>
             </tr>
         </thead>
@@ -128,7 +128,7 @@
 
 <script>
    $(document).ready(function() {
-    document.getElementById("brandLink").style.fontWeight = "bold";
+    document.getElementById("binSkuLink").style.fontWeight = "bold";
     loadBinSku();
  });
 
