--- a/assure/src/main/webapp/html/snippets.html
+++ b/assure/src/main/webapp/html/snippets.html
@@ -28,14 +28,14 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/brands}" id="brandLink">Brand</a>
+        <a class="nav-link" th:href="@{/ui/bin-skus}" id="binSkuLink">BinSKU</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/products}" id="productLink">Product</a>
+        <a class="nav-link" th:href="@{/ui/parties}" id="partyLink">Party</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/inventory}" id="inventoryLink">Inventory</a>
+        <a class="nav-link" th:href="@{/ui/channels}" id="channelLink">Channel</a>
       </li>
 
 
