channel listing half ui complete

--- a/assure/src/main/webapp/html/snippets.html
+++ b/assure/src/main/webapp/html/snippets.html
@@ -37,8 +37,9 @@
       <li class="nav-item">
         <a class="nav-link" th:href="@{/ui/channels}" id="channelLink">Channel</a>
       </li>
-
-
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/ui/channel-listings}" id="channelListingLink">Channel Listing</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" th:href="@{/ui/orders}" id="orderLink">Order</a>
       </li>
