product ui complete

--- a/assure/src/main/webapp/html/binSku.html
+++ b/assure/src/main/webapp/html/binSku.html
@@ -18,7 +18,7 @@
   <div class="jumbotron" >
     <div class="buttonBottom">
       <button type="button" class="btn btn-primary" data-dismiss="modal" id="addBtn" onclick="generateBins()">Generate bins</button>
-      <button type="button" class="btn btn-primary" data-dismiss="modal" id="addBtn" onclick="uploadBinSkus()">Upload BinSkus</button>
+      <button type="button" class="btn btn-primary" data-dismiss="modal" id="addBtn" onclick="uploadBinSkus()">Add BinSkus</button>
     </div>
     
     <table  class="table" >
