--- a/assure/src/main/webapp/html/channel.html
+++ b/assure/src/main/webapp/html/channel.html
@@ -17,7 +17,7 @@
   </nav>
   <div class="jumbotron" >
     <div class="buttonBottom">
-      <button type="button" class="btn btn-primary" data-dismiss="modal" id="addBtn" onclick="addChannel()">Add Channel</button>
+      <button type="button" class="btn btn-primary" data-dismiss="modal" id="addBtn" onclick="addChannel()">Add Channels</button>
     </div>
     
     <table  class="table" >
