--- a/assure/src/main/webapp/html/snippets.html
+++ b/assure/src/main/webapp/html/snippets.html
@@ -41,21 +41,10 @@
         <a class="nav-link" th:href="@{/ui/channel-listings}" id="channelListingLink">Channel Listing</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/orders}" id="orderLink">Order</a>
+        <a class="nav-link" th:href="@{/ui/products}" id="productLink">Product</a>
       </li>
       <li class="nav-item">
-        <!--        <a class="nav-link" th:href="@{/ui/reports}" id="ReportsLink">Reports</a>-->
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" style="-webkit-appearance:none" >
-            Reports
-          </a>
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" th:href="@{/ui/reports}">Generate Sales Report</a>
-            <a class="dropdown-item" href="" onclick="brandReport()">Generate Brand Report</a>
-            <a class="dropdown-item" href="" onclick="inventoryReport()">Generate Inventory Report</a>
-          </div>
-        </div>
+        <a class="nav-link" th:href="@{/ui/orders}" id="orderLink">Order</a>
       </li>
     </ul>
   </div>
