channel order ui complete

--- a/assure/src/main/webapp/html/binSku.html
+++ b/assure/src/main/webapp/html/binSku.html
@@ -12,7 +12,7 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a th:href="@{/ui/}">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">BinSku</li>
+      <li class="breadcrumb-item active" aria-current="page">Bin Invetory</li>
     </ol>
   </nav>
   <div class="jumbotron" >
