--- a/channel/src/main/webapp/html/order.html
+++ b/channel/src/main/webapp/html/order.html
@@ -17,10 +17,10 @@
   </nav>
   <div class="jumbotron" >
     <div class="buttonBottom">
-      <button type="button" class="btn btn-primary" data-dismiss="modal" id="addBtn" onclick="addOrder()">Add Orders</button>
+      <button type="button" class="btn btn-primary" id="addBtn" onclick="addOrder()">Add Orders</button>
     </div>
     
-    <table  class="table" >
+    <!-- <table  class="table" >
         <thead class="thead-dark">
             <tr>
               <th scope="col">Order ID</th>
@@ -36,8 +36,8 @@
 
         <tbody id="orderTbody">
         </tbody>
-    </table>
-    <nav aria-label="Page navigation example">
+    </table> -->
+    <!-- <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-end">
         <li class="page-item disabled" id = "prevLi">
           <a class="page-link" href="#" tabindex="-1" onclick="prevPage()">Previous</a>
@@ -47,7 +47,7 @@
           <a class="page-link" href="#" onclick="nextPage()">Next</a>
         </li>
       </ul>
-    </nav>
+    </nav> -->
   </div>
   
 
@@ -142,7 +142,6 @@
 <script>
    $(document).ready(function() {
     document.getElementById("orderLink").style.fontWeight = "bold";
-    loadOrder();
  });
 
 </script>
