--- a/channel/src/main/webapp/html/snippets.html
+++ b/channel/src/main/webapp/html/snippets.html
@@ -17,7 +17,7 @@
 </head>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-1" th:fragment="name_site_navbar">
-  <a class="navbar-brand" th:href="@{/ui/}">
+  <a class="navbar-brand">
     <img th:src="@{/static/logo.jpg}" class="d-inline-block align-top" alt="">
   </a>
 
@@ -28,23 +28,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/bin-skus}" id="binSkuLink">Bin Inventory</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/parties}" id="partyLink">Party</a>
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/channels}" id="channelLink">Channel</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/channel-listings}" id="channelListingLink">Channel Listing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/products}" id="productLink">Product</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" th:href="@{/ui/orders}" id="orderLink">Order</a>
+        <a class="nav-link" th:href="@{/ui/orders}" id="orderLink">Channel Order</a>
       </li>
     </ul>
   </div>
