--- a/channel/src/main/webapp/html/order.html
+++ b/channel/src/main/webapp/html/order.html
@@ -74,7 +74,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" ></h5>
+        <h5 class="modal-title" id="orderItemTitle"></h5>
       </div>
       <div class="modal-body" id="orderItemModalbody">
         
