final commit before ppt

--- a/assure/src/main/webapp/html/binSku.html
+++ b/assure/src/main/webapp/html/binSku.html
@@ -11,7 +11,7 @@
 <div class="container-fluid">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a th:href="@{/ui/}">Home</a></li>
+      <li class="breadcrumb-item">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Bin Inventory</li>
     </ol>
   </nav>
