--- a/assure/src/main/webapp/html/product.html
+++ b/assure/src/main/webapp/html/product.html
@@ -11,7 +11,7 @@
 <div class="container-fluid">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a th:href="@{/ui/}">Home</a></li>
+      <li class="breadcrumb-item">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Product</li>
     </ol>
   </nav>
@@ -24,7 +24,7 @@
         <thead class="thead-dark">
             <tr>
               <th scope="col">Client SKU ID</th>
-              <th scope="col">Client ID</th>
+              <th scope="col">Client Name</th>
               <th scope="col">Name</th>
               <th scope="col">Brand ID</th>
               <th scope="col">MRP</th>
@@ -36,7 +36,7 @@
         <tbody id="productTbody">
         </tbody>
     </table>
-    <nav aria-label="Page navigation example">
+    <nav aria-label="Page navigation">
       <ul class="pagination justify-content-end">
         <li class="page-item disabled" id = "prevLi">
           <a class="page-link" href="#" tabindex="-1" onclick="prevPage()">Previous</a>
