--- a/channel/src/main/webapp/html/order.html
+++ b/channel/src/main/webapp/html/order.html
@@ -11,7 +11,7 @@
 <div class="container-fluid">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a th:href="@{/ui/}">Home</a></li>
+      <li class="breadcrumb-item">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Order</li>
     </ol>
   </nav>
@@ -32,7 +32,7 @@
             </tr>
         </thead>
 
-        <tbody id="orderTbody">
+        <tbody id="orderTbody" style="overflow-y: auto; max-height: 340px;">
         </tbody>
     </table>
     <nav aria-label="Page navigation example">
