--- a/assure/src/main/webapp/html/order.html
+++ b/assure/src/main/webapp/html/order.html
@@ -11,7 +11,7 @@
 <div class="container-fluid">
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a th:href="@{/ui/}">Home</a></li>
+      <li class="breadcrumb-item">Home</a></li>
       <li class="breadcrumb-item active" aria-current="page">Order</li>
     </ol>
   </nav>
@@ -36,7 +36,7 @@
         <tbody id="orderTbody">
         </tbody>
     </table>
-    <nav aria-label="Page navigation example">
+    <nav aria-label="Page navigation">
       <ul class="pagination justify-content-end">
         <li class="page-item disabled" id = "prevLi">
           <a class="page-link" href="#" tabindex="-1" onclick="prevPage()">Previous</a>
